--- a/src/main/resources/com/example/pipeburstclient/main-view.fxml
+++ b/src/main/resources/com/example/pipeburstclient/main-view.fxml
@@ -1,27 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <?import org.controlsfx.control.textfield.CustomTextField?>
-<VBox alignment="CENTER" spacing="10" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.example.pipeburstclient.MainController">
-    <padding>
-        <Insets bottom="20" left="20" right="20" top="20"/>
-    </padding>
+<StackPane xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1"
+           fx:controller="com.example.pipeburstclient.MainController">
 
-    <CustomTextField fx:id="lengthField" promptText="Length"/>
-    <CustomTextField fx:id="diameterField" promptText="Diameter"/>
-    <CustomTextField fx:id="horizontalQuantityField" promptText="Horizontal Quantity"/>
-    <CustomTextField fx:id="verticalQuantityField" promptText="Vertical Quantity"/>
+    <VBox alignment="CENTER" spacing="10" xmlns:fx="http://javafx.com/fxml">
+        <padding>
+            <Insets bottom="20" left="20" right="20" top="20"/>
+        </padding>
 
-    <Button text="Создать Pipe" onAction="#inputPipeData"/>
-    <CustomTextField fx:id="velocityField" promptText="Velocity"/>
-    <CustomTextField fx:id="flowField" promptText="Flow"/>
-    <CustomTextField fx:id="pressureField" promptText="Pressure"/>
-    <CustomTextField fx:id="temperatureField" promptText="Temperature"/>
-    <CustomTextField fx:id="densityField" promptText="Density"/>
+        <Label fx:id="messageInput"/>
+        <CustomTextField fx:id="lengthField" promptText="Length"/>
+        <CustomTextField fx:id="diameterField" promptText="Diameter"/>
+        <CustomTextField fx:id="horizontalQuantityField" promptText="Horizontal Quantity"/>
+        <CustomTextField fx:id="verticalQuantityField" promptText="Vertical Quantity"/>
 
-    <Button text="Create Point" onAction="#inputPointsData"/>
-</VBox>
+        <Button text="Создать Pipe" fx:id="startInputPoints"/>
+        <!--<ListView fx:id="listView" visible="false"/>-->
+
+    </VBox>
+</StackPane>
