--- a/src/main/resources/com/example/pipeburstclient/style/style.css
+++ b/src/main/resources/com/example/pipeburstclient/style/style.css
@@ -2,6 +2,13 @@
     -fx-border-color: red;
     -fx-border-width: 2px;
 }
+
+.point-card {
+    -fx-background-color: #ffffff;
+    -fx-border-color: #cccccc;
+    -fx-border-width: 1px;
+    -fx-padding: 10px;
+}
 .onHover{
     -fx-background-color: ORANGE;
 }
